samples/_failures_safe/1761146853_042419_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be1f0fa0.c: In function ‘handle_event’:
./samples/SAFE/__tmp_be1f0fa0.c:140:9: error: expected declaration or statement at end of input
  140 |         success = write_data(sm);
      |         ^~~~~~~
./samples/SAFE/__tmp_be1f0fa0.c:140:9: error: expected declaration or statement at end of input
